PyMaker/datas/object2/RawHTML/i11301/Python_DOC_referPages.python-2-7-unknown-syntax-error.txt
<div class="post-text" itemprop="text">
<p>Here is my code</p>
<pre><code>hrs = raw_input("Enter Hours:")
h = float(hrs)
rate = raw_input("Enter Rate:")
r = float(rate)

if hrs &lt;= 40
    pay = hrs * rate
    print pay

else hrs &gt; 40
    pay = hrs * 15.75
    print pay
</code></pre>
<p>Here is the error message</p>
<pre><code>486406789.415.py", line 6
    if hrs &lt;= 40
               ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>There are multiple errors in your code. The invalid syntax error is quite easy to fix, just add the colon in the end of the if statement and the else does not take any conditions (elif, however would). This is very basic Python syntax. You can always check the official Python tutorials and documentations as a first step to troubleshoot syntax errors. e.g.:</p>
<p><a href="http://www.tutorialspoint.com/python/python_if_else.htm" rel="nofollow">http://www.tutorialspoint.com/python/python_if_else.htm</a></p>
<p>after you fix the SyntaxError you will run into other issues when comparing strings with integers, as in <code>hrs &lt;= 40</code>. Instead you want to compare the your converted input <code>h</code>. The same goes for the calculations: use <code>h</code> instead of <code>hrs</code> and <code>r</code> instead of rate.</p>
<p>See if you can solve all the issues. If you don't manage, here is a working example of the code: <a href="https://gist.github.com/fabianegli/bae9864e5166fac4dd2baeccd5ed3f8d" rel="nofollow">https://gist.github.com/fabianegli/bae9864e5166fac4dd2baeccd5ed3f8d</a></p>
</div>
<div class="post-text" itemprop="text">
<p>You are missing colons (<code>:</code>) after the conditions. Also, note that <code>else</code> doesn't take a condition, you need to use <code>elif</code>:</p>
<pre><code>if hrs &lt;= 40:
    # Here -^
    pay = hrs * rate
    print pay

elif hrs &gt; 40: # Note the elif
    # Here --^
    pay = hrs * 15.75
    print pay
</code></pre>
</div>
<span class="comment-copy"><a href="https://docs.python.org/3/tutorial/controlflow.html#if-statements" rel="nofollow noreferrer">if statement requires colon (:) after conditional</a></span>
<span class="comment-copy">Thank you for this, it helped me a lot!</span>
<span class="comment-copy">You are welcome!</span>
<span class="comment-copy">Thank you very much, very helpful!</span>
